# stm32-cubemx-cmake

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/CubeMX/: CMakeLists.txt  README.md
lib/CubeMX/embedded/: embedded.ioc
src/hello/: CMakeLists.txt  main.cpp
